C:/Program Files/Git/ button changed

--- a/cal.html
+++ b/cal.html
@@ -43,7 +43,7 @@
             <td><input class="btn" type="button" value="." onclick="solve('.')"></td>
             <td><input class="btn" type="button" value="0" onclick="solve('0')"></td>
             <td><input class="equal" type="button" value="=" "></td>
-            <td><input class="btn" type="button" value="/" ></td>
+            <td><input class="btn" type="button" value="/" onclick="solve('/')"></td>
         </tr>
     </table>
     <script src="cal.js"></script>
